--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -237,7 +237,7 @@
     </div>
     <div id="game-over" class="page">
         <h1>Game Over!</h1>
-        <button id="restart-game">Play Again <span id="restart-symbol"></span></button>
+        <h3>Take Home: $<span id="take-home"></span></h3>
     </div>
     <script type="module" src="main.js"></script>
 </body>
