--- a/blackjack/index.html
+++ b/blackjack/index.html
@@ -59,10 +59,10 @@
                 </div>
                 <div id="center-controls">
                     <h1 id="bet">Bet: $<span id="current-bet">5</span></h1>
-                    <button id="double" class="btn">Double</button>
+                    <button id="double" class="btn hidden">Double</button>
                 </div>
-                <div id="rh-controls">
-                    <button id="split" class="btn"><span id="split-icon"></span>Split</button>
+                <div id="rh-controls" class="hidden">
+                    <button id="split" class="btn hidden"><span id="split-icon"></span>Split</button>
                     <button id="stand" class="btn"><span id="stand-icon"></span>Stand</button>
                 </div>
             </div>
