--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </header>
     <main>
         <nav>
-            <a>Joe's 1</a>
-            <a>Joe's 2</a>
-            <a>Joe's 3</a>
-            <a>Joe's 4</a>
-            <a>Blackjack</a>
+            <a href="/joe's-1/index.html">Joe's 1</a>
+            <a href="/joe's-2/index.html">Joe's 2</a>
+            <a href="/joe's-3/index.html">Joe's 3</a>
+            <a href="/joe's-4/index.html">Joe's 4</a>
+            <a href="/blackjack/index.html">Blackjack</a>
         </nav>
     </main>
 </body>
