--- a/joe's-2/index.html
+++ b/joe's-2/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="joes_assets/style.css" />
+    <link rel="stylesheet" href="../joes_assets/style.css" />
 </head>
 <body>
     <main>
@@ -46,7 +46,7 @@
         <div id="item-list" class="active-page">
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="/joes_assets/hotdog_test.png" alt="hotdog"/>
+                    <img class="item-img" src="../joes_assets/hotdog_test.png" alt="hotdog"/>
                     <h2 class="item-title">Hotdog</h2>
                 </div>
                 <div class="item-info">
@@ -61,7 +61,7 @@
             </div>
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="/joes_assets/fries_test.png" alt="fries"/>
+                    <img class="item-img" src="../joes_assets/fries_test.png" alt="fries"/>
                     <h2 class="item-title">Fries</h2>
                 </div>
                 <div class="item-info">
@@ -76,7 +76,7 @@
             </div>
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="/joes_assets/soda_test.png" alt="soda"/>
+                    <img class="item-img" src="../joes_assets/soda_test.png" alt="soda"/>
                     <h2 class="item-title">Soda</h2>
                 </div>
                 <div class="item-info">
@@ -91,7 +91,7 @@
             </div>
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="/joes_assets/sauerkraut_test.png" alt="sauerkraut"/>
+                    <img class="item-img" src="../joes_assets/sauerkraut_test.png" alt="sauerkraut"/>
                     <h2 class="item-title">Sauerkraut</h2>
                 </div>
                 <div class="item-info">
