--- a/joe's-1/index.html
+++ b/joe's-1/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="../joes_assets//fries_test.png" alt="fries"/>
+                    <img class="item-img" src="../joes_assets/fries_test.png" alt="fries"/>
                     <h2 class="item-title">Fries</h2>
                 </div>
                 <div class="item-info">
@@ -76,7 +76,7 @@
             </div>
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="../joes_assets//soda_test.png" alt="soda"/>
+                    <img class="item-img" src="../joes_assets/soda_test.png" alt="soda"/>
                     <h2 class="item-title">Soda</h2>
                 </div>
                 <div class="item-info">
@@ -91,7 +91,7 @@
             </div>
             <div class="item">
                 <div class="item-display">
-                    <img class="item-img" src="../joes_assets//sauerkraut_test.png" alt="sauerkraut"/>
+                    <img class="item-img" src="../joes_assets/sauerkraut_test.png" alt="sauerkraut"/>
                     <h2 class="item-title">Sauerkraut</h2>
                 </div>
                 <div class="item-info">
